<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_10">

    <com.sultanburger.view.edittext.EditTextCustom
        android:id="@+id/accountInfo_editText_mobileNumber"
        style="@style/EditTextStroke"
        android:hint="@string/account_info_mobile_number"
        android:inputType="number"
        app:fontModel="openSansRegular" />

    <com.sultanburger.view.edittext.EditTextCustom
        android:id="@+id/accountInfo_editText_name"
        style="@style/EditTextStroke"
        android:hint="@string/account_info_name"
        android:inputType="textPersonName"
        app:fontModel="openSansRegular" />

    <com.sultanburger.view.edittext.EditTextCustom
        android:id="@+id/accountInfo_editText_email"
        style="@style/EditTextStroke"
        android:hint="@string/account_info_email"
        android:imeOptions="actionDone"
        android:inputType="textEmailAddress"
        app:fontModel="openSansRegular" />

    <com.sultanburger.view.button.ButtonCustom
        android:id="@+id/accountInfo_button_save"
        style="@style/ButtonRed"
        android:layout_marginTop="@dimen/margin_15"
        android:text="@string/account_info_save"
        app:fontModel="openSansRegular" />
</LinearLayout>