<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:padding="@dimen/padding_30"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signUp_editText_mobileNumber"
                style="@style/EditText"
                android:hint="@string/sign_up_mobile_number"
                android:inputType="number"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signUp_editText_name"
                style="@style/EditText"
                android:hint="@string/sign_up_name"
                android:inputType="textPersonName"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signUp_editText_email"
                style="@style/EditText"
                android:hint="@string/sign_up_email"
                android:inputType="textEmailAddress"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signUp_editText_password"
                style="@style/EditText"
                android:hint="@string/sign_up_password"
                android:inputType="textPassword"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signUp_editText_confirmPassword"
                style="@style/EditText"
                android:hint="@string/sign_up_confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.button.ButtonCustom
                android:id="@+id/signUp_button_signUp"
                style="@style/ButtonRed"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_up_sign_up"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.textview.TextViewCustom
                android:id="@+id/signUp_textView_skip"
                style="@style/TextView_Title"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_up_skip"
                android:textColor="@color/white"
                app:fontModel="openSansBold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
