<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/delivery_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_15"
        android:background="@drawable/rounded_corner_divider"
        android:orientation="vertical"
        android:padding="@dimen/padding_10">

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/delivery_editText_houseOrOfficeNumber"
            style="@style/EditText"
            android:hint="@string/delivery_house_or_office_number"
            android:inputType="text"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/delivery_editText_streetNumberName"
            style="@style/EditText"
            android:hint="@string/delivery_street_number_name"
            android:inputType="text"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/delivery_editText_floor"
            style="@style/EditText"
            android:hint="@string/delivery_floor"
            android:inputType="text"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/delivery_editText_areaCity"
            style="@style/EditText"
            android:hint="@string/delivery_area_city"
            android:inputType="text"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/delivery_editText_deliveryInstruction"
            style="@style/EditText"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:gravity="top|left"
            android:hint="@string/delivery_delivery_instruction"
            android:inputType="textMultiLine"
            android:lines="3"
            android:maxLines="5"
            app:fontModel="openSansRegular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/windowBackground"
        android:orientation="horizontal"
        android:padding="@dimen/padding_10"
        android:weightSum="2">

        <com.sultanburger.view.button.ButtonCustom
            android:id="@+id/delivery_button_chooseFromExisting"
            style="@style/ButtonRed"
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/delivery_choose_from_existing"
            app:fontModel="openSansRegular" />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <com.sultanburger.view.button.ButtonCustom
            android:id="@+id/delivery_button_useThisAddress"
            style="@style/ButtonRed"
            android:layout_width="fill_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/delivery_use_this_address"
            app:fontModel="openSansRegular" />
    </LinearLayout>
</FrameLayout>