<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="3">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/padding_30">

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signIn_editText_mobileNumberEmail"
                style="@style/EditText"
                android:hint="@string/sign_in_mobile_number_email"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.edittext.EditTextCustom
                android:id="@+id/signIn_editText_password"
                style="@style/EditText"
                android:hint="@string/sign_in_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.button.ButtonCustom
                android:id="@+id/signIn_button_login"
                style="@style/ButtonRed"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_in_login"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.textview.TextViewCustom
                android:id="@+id/signIn_textView_resetPassword"
                style="@style/TextView"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_in_reset_password"
                android:textColor="@color/white"
                app:fontModel="openSansRegular" />

            <com.sultanburger.view.textview.TextViewCustom
                android:id="@+id/signIn_textView_newToAppSignUp"
                style="@style/TextView"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_in_new_to_app_sign_up"
                android:textColor="@color/white"
                app:fontModel="openSansBold" />

            <com.sultanburger.view.textview.TextViewCustom
                android:id="@+id/signIn_textView_skip"
                style="@style/TextView_Title"
                android:layout_marginBottom="@dimen/margin_15"
                android:layout_marginTop="@dimen/margin_15"
                android:text="@string/sign_in_skip"
                android:textColor="@color/white"
                app:fontModel="openSansBold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/windowBackground" />

                <com.sultanburger.view.textview.TextViewCustom
                    style="@style/TextView"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_15"
                    android:layout_marginRight="@dimen/margin_15"
                    android:text="@string/sign_in_or_login_with"
                    android:textColor="@color/white"
                    app:fontModel="openSansSemiBold" />

                <View
                    android:layout_width="40dp"
                    android:layout_height="1dp"
                    android:background="@color/windowBackground" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <com.sultanburger.view.button.ButtonCustom
                    android:id="@+id/signIn_button_facebook"
                    style="@style/ButtonRed"
                    android:layout_weight="1"
                    android:background="@color/blue"
                    android:text="@string/sign_in_facebook"
                    app:fontModel="openSansRegular" />

                <com.sultanburger.view.button.ButtonCustom
                    android:id="@+id/signIn_button_google"
                    style="@style/ButtonRed"
                    android:layout_weight="1"
                    android:background="@color/red"
                    android:text="@string/sign_in_google"
                    app:fontModel="openSansRegular" />

                <com.sultanburger.view.button.ButtonCustom
                    android:id="@+id/signIn_button_twitter"
                    style="@style/ButtonRed"
                    android:layout_weight="1"
                    android:background="@color/dark_blue"
                    android:text="@string/sign_in_twitter"
                    app:fontModel="openSansRegular" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
