<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/padding_30">

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/changePassword_editText_oldPassword"
            style="@style/EditText"
            android:hint="@string/change_password_current_password"
            android:inputType="textPassword"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/changePassword_editText_newPassword"
            style="@style/EditText"
            android:hint="@string/change_password_new_password"
            android:inputType="textPassword"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/changePassword_editText_confirmPassword"
            style="@style/EditText"
            android:hint="@string/change_password_confirm_new_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.button.ButtonCustom
            android:id="@+id/changePassword_button_save"
            style="@style/ButtonRed"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/change_password_save"
            app:fontModel="openSansRegular" />
    </LinearLayout>
</LinearLayout>
