<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:weightSum="2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="top"
        android:orientation="vertical"
        android:padding="@dimen/padding_30">

        <com.sultanburger.view.textview.TextViewCustom
            style="@style/TextView_SubHeading"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/order_tracking_mobile_number_enter_mobile_number"
            android:textColor="@color/light_text_primary"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.edittext.EditTextCustom
            android:id="@+id/orderTrackingMobileNumber_editText_mobileNumber"
            style="@style/EditText"
            android:layout_marginTop="@dimen/margin_30"
            android:hint="@string/order_tracking_mobile_number_mobile_number"
            android:imeOptions="actionDone"
            android:inputType="number"
            app:fontModel="openSansRegular" />

        <com.sultanburger.view.button.ButtonCustom
            android:id="@+id/orderTrackingMobileNumber_button_orderTracking"
            style="@style/ButtonRed"
            android:layout_marginTop="@dimen/margin_15"
            android:text="@string/order_tracking_mobile_number_order_tracking"
            app:fontModel="openSansRegular" />
    </LinearLayout>
</LinearLayout>
